[project]
name = "bsd-unitree-controller"
version = "0.1.0"
description = "宇树机器人控制流程系统 - 对外 HTTP 接入层"
# 兼容 ROS Humble（Python 3.10）；开发机用 3.11 也能跑
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # 出站 HTTP 调用
    "httpx>=0.27.0",
    # 出站 HTTP 重试机制（类比 Spring Retry）
    "tenacity>=8.2.0",
    # 数据模型与配置
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    # 日志
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",   # 测试 FastAPI 用 TestClient
]
# 注意：rclpy 不在此声明，因为它在 PyPI 上不可用，必须走 ROS 发行版安装：
#   sudo apt install ros-humble-rclpy
# 代码里用 try/except import rclpy 做软依赖处理，Windows 开发机不装也能跑。

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
